--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,3 @@
-@article{fornero2011effect,
-  title={The effect of financial literacy on mortgage choices},
-  author={Fornero, Elsa and Monticone, Chiara and Trucchi, Serena},
-  year={2011},
-  publisher={Netspar Discussion Paper}
-}
 @incollection{kuchler2023housing,
   title={Housing market expectations},
   author={Kuchler, Theresa and Piazzesi, Monika and Stroebel, Johannes},
@@ -108,23 +102,17 @@
   year={2017},
   publisher={Oxford University Press}
 }
-@article{botsch2023long,
-  title={The long shadows of the great inflation: Evidence from residential mortgages},
-  author={Botsch, Matthew J and Malmendier, Ulrike},
-  journal={Available at SSRN 3888762},
-  year={2023}
-}
 @misc{mishkin2007housing,
   title={Housing and the monetary transmission mechanism},
   author={Mishkin, Frederic S},
   year={2007},
   publisher={National Bureau of Economic Research Cambridge, Mass., USA}
 }
-@article{basten2017banks,
+@techreport{basten2017banks,
   title={How do banks and households manage interest rate risk? Evidence from the Swiss mortgage market},
   author={Basten, Christoph and Guin, Benjamin and Casanova, Catherine},
   year={2017},
-  publisher={CESifo Working Paper Series}
+  institution={CESifo}
 }
 @article{krainer2014mortgage,
   title={Mortgage loan securitization and relative loan performance},
@@ -185,21 +173,11 @@
   year={2017},
   publisher={Wiley Online Library}
 }
-@article{fornero2011effect,
+@techreport{fornero2011effect,
   title={The effect of financial literacy on mortgage choices},
   author={Fornero, Elsa and Monticone, Chiara and Trucchi, Serena},
   year={2011},
-  publisher={Netspar Discussion Paper}
-}
-@article{kim2016borrower,
-  title={The borrower's perceived risk in mortgage choice},
-  author={Kim, Dongshin and Ziobrowski, Alan J},
-  journal={Real Estate Economics},
-  volume={44},
-  number={3},
-  pages={606--626},
-  year={2016},
-  publisher={Wiley Online Library}
+  institution={Netspar}
 }
 @article{campbell2006household,
   title={Household finance},
@@ -220,14 +198,6 @@
   pages={1663--1690},
   year={2013},
   publisher={Wiley Online Library}
-}
-@incollection{paiella2007choosing,
-  title={Choosing between fixed-and adjustable-rate mortgages},
-  author={Paiella, Monica and Pozzolo, Alberto Franco},
-  booktitle={Household credit usage: personal debt and mortgages},
-  pages={219--236},
-  year={2007},
-  publisher={Springer}
 }
 @article{campbell2003household,
   title={Household risk management and optimal mortgage choice},
@@ -458,12 +428,6 @@ abstract = {This paper studies how borrowers with different levels of default ri
   pages={125--144},
   year={1990},
   publisher={Wiley Online Library}
-}
-@article{fornero2011effect,
-  title={The effect of financial literacy on mortgage choices},
-  author={Fornero, Elsa and Monticone, Chiara and Trucchi, Serena},
-  year={2011},
-  publisher={Netspar Discussion Paper}
 }
 @article{voigtlander2014stability,
   title={The stability of the German housing market},
