--- a/title.tex
+++ b/title.tex
@@ -1,24 +1,17 @@
-\title{Regulation and bank lending in South Africa: A narrative index approach}
-
-
-
-
+\title{ARM versus FRM in South Africa}
 
 \author {Xolani Sibande\footnote{Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.} \and
-Dumakude Nxumalo\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: dumakude.nxumalo@up.ac.za} \and
-Keaoleboga Mncube\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: keaolebogamncube@gmail.com} \and
-Steve Koch\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: steve.koch@up.ac.za} \and
-Nicola Viegi\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: viegin@gmail.com}}
+Khutso Thobakgale\footnote{Economic Research Department, South African Reserve Bank; Email: khutso.thobekgale@resbank.co.za.}}
 
 
 \date{\today}
 \maketitle
 
 \begin{abstract}
-Duma.
+Ipsum
 
 \end{abstract}
 
-\noindent\textbf{Keywords}: Bank lending, Narrative methods, Finance regulation\\
-\textbf{JEL Codes}: G01, G18, G28, G32, G38
+\noindent\textbf{Keywords}: \\
+\textbf{JEL Codes}: 
 \newpage
